--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,7 +17,7 @@
 
 #ContenedorNombre {
     width: 80%;
-    background-image: url("images/fondogris.jpg");
+    background-image: url("../images/fondogris.jpg");
 }
 
 #ContenedorNombre h1 {
@@ -53,7 +53,7 @@
 
 #TextoOculto {
     height: 400px;
-    background-image: url("images/fondotxt.jpg");
+    background-image: url("../images/fondotxt.jpg");
     background-size: 90%;
     text-align: center;
     font-size: 20px;
